# ckpt-streamer

./: .gitignore  README.md  pyproject.toml
src/ckpt_streamer/: __init__.py  _memory.py  streamer.py  utils.py
src/ckpt_streamer/mmap/: __init__.py
src/ckpt_streamer/mmap/posix/: mmap.py
src/ckpt_streamer/mmap/win/: mmap.py
test/: perf.py  perf1.csv  perf2.csv  plot_perf.py  test.py  test_apply_state_dict.py  utils.py
